package com.survivalcoding;

interface Thing {
    double getWeight();
    void setWeight(double weight);
}