@startuml
'https://plantuml.com/class-diagram

abstract class Asset {
    String name
    int price
}
abstract class TangibleAsset {
    String color
    double weight
    getWeight() : double
    setWeight(double weight) : void
}
abstract class IntangibleAsset
interface Thing {
    double getWeight()
    void setWeight(double weight)
}
class Computer {
    String makerName
}
class Book {
    String isbn
}
class Patent

Asset <|-- TangibleAsset
Asset <|-- IntangibleAsset
TangibleAsset <|-- Computer
TangibleAsset <|-- Book
IntangibleAsset <|-- Patent
Thing <|.. TangibleAsset

@enduml

